# gnome-x

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  icons.toml  install.sh  zensical.toml
.github/workflows/: docs.yml  release.yml
build-aux/flatpak/: io.github.gnomex.GnomeX.json
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs  testing.rs
crates/app/src/ports/: app_launcher_overrides.rs  app_settings.rs  appearance_settings.rs  blur_my_shell.rs  content_repository.rs  extension_repository.rs  external_app_themer.rs  floating_dock.rs  gdm_themer.rs  icon_theme_recolorer.rs  local_installer.rs  mod.rs  mutter_settings.rs  pack_storage.rs  shell_customizer.rs  shell_proxy.rs  theme_css.rs  theme_render_trigger.rs  theme_writer.rs  theming_conflict_detector.rs  wallpaper_palette_provider.rs  wallpaper_slideshow_writer.rs  window_decoration_probe.rs
crates/app/src/use_cases/: apply_theme.rs  browse.rs  customize.rs  customize_shell.rs  gdm_theme.rs  manage.rs  mod.rs  packs.rs  wallpaper_slideshow.rs
crates/app/tests/: material_palette_pipeline.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: color.rs  decoration_report.rs  error.rs  experience_pack.rs  extension.rs  external_theme_spec.rs  lib.rs  material_palette.rs  pack_compatibility.rs  shadowed_resource.rs  shell_tweak.rs  shell_version.rs  theme.rs  theme_capability.rs  theme_spec.rs  theming_conflict.rs  wallpaper_slideshow.rs
crates/infra/: Cargo.toml
crates/infra/src/: blur_my_shell.rs  chromium_themer.rs  dbus_shell_proxy.rs  desktop_app_launcher_overrides.rs  ego_client.rs  filesystem_installer.rs  floating_dock.rs  fs_theme_render_trigger.rs  gsettings_app_settings.rs  gsettings_appearance.rs  gsettings_mutter.rs  gsettings_theme_spec.rs  gsettings_wallpaper_palette.rs  icon_theme_recolorer.rs  lib.rs  ocs_client.rs  pack_toml_storage.rs  pkexec_gdm_themer.rs  theme_paths.rs  theme_writer.rs  theming_conflict_detector.rs  vscode_themer.rs  wallpaper_palette.rs  wallpaper_slideshow_xml.rs  window_decoration_probe.rs
crates/infra/src/shell_customizer/: common.rs  gnome45.rs  gnome46.rs  gnome47.rs  gnome50.rs  mod.rs
crates/infra/src/theme_css/: common.rs  gnome45.rs  gnome46.rs  gnome47.rs  gnome50.rs  gtk3.rs  mod.rs
crates/infra/tests/: chromium_gtk3_overrides.rs  gdm_polkit_pure.rs  gtk3_css_divergence.rs  layer_separation_css.rs  nautilus_css_fixture.rs  pack_dual_css_apply.rs  pack_roundtrip.rs  scaling_adapter.rs  shadow_detection.rs  shadowed_resources.rs  version_isolation.rs  wallpaper_slideshow_xml.rs  widget_color_overrides.rs  widget_style_css.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs  services.rs
crates/ui/src/components/: color_picker.rs  content_row.rs  customize.rs  detail_view.rs  diagnostics.rs  explore.rs  extension_row.rs  installed.rs  mod.rs  pack_row.rs  packs.rs  settings.rs  shell_tweaks.rs  theme_builder.rs  wallpaper_slideshow.rs
data/: io.github.gnomex.GnomeX.desktop.in  io.github.gnomex.GnomeX.gschema.xml  io.github.gnomex.GnomeX.metainfo.xml.in  org.gnomex.gdm-theme.policy
data/debian/: postinst  postrm
data/icons/: index.theme
data/resources/: resources.gresource.xml  style.css
data/systemd/: 50-gnome-x.preset  experienced.service  gnome-x-accent-scheduler.service  gnome-x-accent-scheduler.timer
docs/: contributing.md  first-run.md  index.md  install.md  known-limitations.md
docs/concepts/: architecture.md  experience-packs.md  no-flatpak.md
docs/reference/: cli.md  gsettings.md  pack-toml.md
docs/tutorials/: apply-a-pack.md  build-a-pack.md  extensions.md  themes.md  theming-conflicts.md  widget-colors.md
extension/io.github.gnomex@io.github.gnomex/: extension.js  metadata.json  stylesheet.css
extension/io.github.gnomex@io.github.gnomex/lib/: floating_dock.js  gnome45_customizer.js  gnome46_customizer.js  gnome47_customizer.js  gnome50_customizer.js  shell_customizer.js
