[package]
name = "gnomex-app"
description = "GNOME X application layer — use cases and port definitions"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# Blue layer (L=1): depends on domain only + minimal trait machinery
[dependencies]
gnomex-domain = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
