[package]
name = "gnomex-cli"
description = "GNOME X command-line interface — experiencectl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "experiencectl"
path = "src/main.rs"

[dependencies]
gnomex-domain = { workspace = true }
gnomex-app = { workspace = true }
gnomex-infra = { workspace = true }

clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
gio = { workspace = true }
glib = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
